# experiment-template

./: .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: build_template.yml
{{ cookiecutter.repo_name }}/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
{{ cookiecutter.repo_name }}/.github/workflows/: fixmes.yml  pre-commit.yml  test.yml
{{ cookiecutter.repo_name }}/src/: main.py
{{ cookiecutter.repo_name }}/tests/: test_api.py
